# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import adminRouter from "./admin";
 import streamsRouter from "./streams";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/auth", authRouter);
+router.use("/admin", adminRouter);
 router.use("/streams", streamsRouter);
 
 export default router;
